--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dunkelberlin",
+  "homepage": "https://MaxDunkelx.github.io/DunkelBerlin",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,9 +8,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d dist"
+
   },
   "dependencies": {
+    "framer-motion": "^12.5.0",
+    "matter-js": "^0.20.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -21,6 +27,7 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "vite": "^6.2.0"
   }
